# pmemfile

./: CMakeLists.txt  suspended_files.md
include/: libpmemfile-core-stubs.h  libpmemfile-core.h  libpmemfile-posix.h
src/libpmemfile/: CMakeLists.txt  path_resolve.c  preload.c  preload.h  sys_util.h  syscall_early_filter.c  vfd_table.c  vfd_table.h
src/libpmemfile-core/: data.c  file.c  stubs.c
src/libpmemfile-posix/: CMakeLists.txt  copy_file_range.c  data.c  data.h  dir.c  fallocate.c  file.c  file.h  flock.c  inode.c  inode.h  layout.h  lock_free_iterator.c  lock_free_iterator.h  lseek.c  mkdir.c  mmap.c  out.c  pool.c  pool.h  read.c  read.h  rename.c  stat.c  truncate.c  unlink.c  write.c
tests/core/: CMakeLists.txt
tests/core/rw/: rw.cpp
tests/posix/rw/: rw.cpp
tests/preload/: CMakeLists.txt
tests/preload/config/: config.cmake
tests/preload/dup/: dup.c
tests/preload/pool_locking/: pool_locking.c
utils/transform/: CMakeLists.txt  FindLibClang.cmake  transform.c
